# trackit

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  PARSERS.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 31074b1ae88b_add_transfer_pairing_columns_to_.py  9dc9f3000d7a_add_budgets_table.py  bb7d501f612c_initial_schema.py  f1a3c2d4e5b6_unique_email_per_connection.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  budgets.py  dashboard.py  debts.py  gmail.py  transactions.py
backend/app/core/: config.py  logging.py  security.py  time_utils.py
backend/app/db/: session.py
backend/app/integrations/: gmail.py
backend/app/models/: __init__.py  budget.py  debt.py  provider_connection.py  transaction.py  user.py
backend/app/parsers/: __init__.py  base.py  itau_co.py  nequi.py
backend/app/schemas/: auth.py  budget.py  dashboard.py  debt.py  transaction.py  user.py
backend/app/scripts/: recategorize.py  reconcile_statement.py
backend/app/services/: budget_status.py  categorizer.py  email_sync.py  google_oauth.py  scheduler.py  transfer_matcher.py
backend/tests/: _helpers.py  conftest.py
backend/tests/core/: test_time_utils.py
backend/tests/fixtures/itau_co/: compra_credito_rappi.eml  compra_debito_rappi.eml  (+3 more)
backend/tests/parsers/: test_itau_co.py  test_nequi.py
backend/tests/services/: test_budget_status.py  test_categorizer.py  test_scheduler.py  test_transfer_matcher.py
(+44 files in other folders)
